--- a/app/src/main/res/drawable/ic_button_bg.xml
+++ b/app/src/main/res/drawable/ic_button_bg.xml
@@ -1,9 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="339dp"
-    android:height="64dp"
-    android:viewportWidth="339"
-    android:viewportHeight="64">
-  <path
-      android:pathData="M10,0L329,0A6,6 0,0 1,335 6L335,50A6,6 0,0 1,329 56L10,56A6,6 0,0 1,4 50L4,6A6,6 0,0 1,10 0z"
-      android:fillColor="#5100A5"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+android:shape="rectangle" android:padding="10dp">
+<!-- you can use any color you want I used here gray color-->
+<solid android:color="#5100A5"/>
+<corners android:radius="6dp"/>
+</shape>
