--- a/app/src/main/res/layout/activity_user_home.xml
+++ b/app/src/main/res/layout/activity_user_home.xml
@@ -33,14 +33,19 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:id="@+id/contactListRecyclerView" />
 
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/fabSummery"
-            android:src="@drawable/ic_group_132"
-            android:paddingBottom="32dp"
+            android:src="@drawable/ic_file"
+            app:backgroundTint="#36006A"
+            app:borderWidth="0dp"
+            app:elevation="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            app:tint="@color/white"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
