--- a/app/src/main/res/layout/logo_with_title.xml
+++ b/app/src/main/res/layout/logo_with_title.xml
@@ -6,8 +6,8 @@
     android:gravity="center"
     >
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
         android:src="@drawable/ic_app_logo"
         android:layout_marginTop="80dp"
         />
