--- a/app/src/main/res/layout/user_summery_item.xml
+++ b/app/src/main/res/layout/user_summery_item.xml
@@ -22,6 +22,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        app:setBackgroundForSummery="@{sheetRow.get(0)}"
         android:padding="16dp">
 
         <TextView
@@ -60,8 +62,8 @@
             android:textSize="14sp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/shareName"
-            app:layout_constraintStart_toEndOf="@id/buyPriceTitle"
-            app:layout_constraintEnd_toStartOf="@+id/netProfitLossTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/sell_price" />
 
         <TextView
@@ -103,8 +105,8 @@
             android:textSize="18sp"
             android:layout_marginTop="3dp"
             app:layout_constraintTop_toBottomOf="@id/buyPriceTitle"
-            app:layout_constraintStart_toEndOf="@id/buyPriceTitle"
-            app:layout_constraintEnd_toStartOf="@+id/netProfitLossTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="@string/sell_price" />
 
         <TextView
@@ -145,8 +147,8 @@
             android:textSize="14sp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/buyPrice"
-            app:layout_constraintStart_toEndOf="@id/buyPriceTitle"
-            app:layout_constraintEnd_toStartOf="@+id/netProfitLossTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/sell_date" />
 
         <TextView
@@ -188,8 +190,8 @@
             android:textSize="18sp"
             android:layout_marginTop="3dp"
             app:layout_constraintTop_toBottomOf="@id/buyDateTitle"
-            app:layout_constraintStart_toEndOf="@id/buyPriceTitle"
-            app:layout_constraintEnd_toStartOf="@+id/netProfitLossTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="@string/sell_price" />
 
         <TextView
@@ -216,8 +218,8 @@
             android:textSize="14sp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/buyDate"
-            app:layout_constraintStart_toEndOf="@id/buyPriceTitle"
-            app:layout_constraintEnd_toStartOf="@+id/netProfitLossTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/absolute_profit" />
 
 
@@ -231,8 +233,8 @@
             android:textSize="18sp"
             android:text="@{sheetRow.get(7)+symbole.percentage}"
             android:layout_marginTop="3dp"
-            app:layout_constraintStart_toEndOf="@id/buyPriceTitle"
-            app:layout_constraintEnd_toStartOf="@+id/netProfitLossTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/absoluteProfitTitle"
             tools:text="@string/net_profit_loss" />
 
