--- a/app/src/main/res/layout/user_home_item.xml
+++ b/app/src/main/res/layout/user_home_item.xml
@@ -20,7 +20,9 @@
         android:elevation="3dp"
         android:onClick="@{()->buySellClickListner.onBuySellClick(buySellModel)}"
         android:layout_margin="10dp"
-        app:setBackground="@{buySellModel}">
+        app:setBackground="@{buySellModel}"
+        app:setOpicity="@{buySellModel}"
+        >
 
         <TextView
             android:layout_width="wrap_content"
