--- a/app/src/main/res/layout/user_home_item.xml
+++ b/app/src/main/res/layout/user_home_item.xml
@@ -30,6 +30,7 @@
             android:fontFamily="@font/roboto_regular"
             android:textFontWeight="500"
             android:textSize="20sp"
+            app:setOpicity="@{buySellModel}"
             android:textColor="@color/black"
             tools:text="Adani Green Energy"
             android:id="@+id/shareName"
@@ -42,6 +43,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_regular"
             android:textFontWeight="400"
+            app:setOpicity="@{buySellModel}"
             android:textSize="14sp"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/shareName"
@@ -59,6 +61,7 @@
             android:textSize="14sp"
             android:textColor="@color/red"
             tools:text="SELL"
+            app:setOpicity="@{buySellModel}"
             android:textAllCaps="true"
             app:setTextColor="@{buySellModel}"
             android:text="@{buySellModel.command}"
